<resources>
    <string name="app_name">Keki</string>
    <string name="quequi">¿Qué quieres hacer hoy?</string>
    <string name="K">K</string>
    <string name="keki">KeKi</string>
    <string name="tel">Número celular</string>
    <string name="comp">Comprobar</string>
    <string name="form">Registro</string>
    <string name="c1">Usuario</string>
    <string name="c2">Nombre</string>
    <string name="c3">Fecha de nacimiento</string>
    <string name="regi">Registrarse</string>
    <string name="title_activity_inicio2">Inicio2</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>
    <string name="title_activity_home">Eventos</string>
    <string name="title_activity_index">Index</string>
    <string name="title_create">Crear</string>
    <string name="content_description">Img</string>
    <string name="cargar">Cargar imagen</string>
    <string name="tituloEvento">Título del evento</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="añadir">Crear Evento</string>
    <string name="error1">Número inválido, ingrese nuevamente</string>
    <string name="fotoDePerfil">Foto de perfil</string>
    <string name="descripcion">Descripción</string>
    <string name="title_activity_maps">Map</string>
    <string name="ubicacion">Ubicación: </string>
    <string name="editPerfil">Editar perfil</string>
    <string name="pistaDescripcion">Breve descripción de su persona (Opcional)</string>
    <string name="guardar">Guardar</string>
    <string name="detalles">Detalles evento</string>
    <string name="costo">Costo del evento</string>
    <string name="gratis">Gratis</string>
    <string name="pago">Pago</string>
    <string name="asistir">Asistir</string>
    <string name="porAsistir">Por asistir</string>
    <string name="creados">Creados</string>
    <string name="invitado">Invitado</string>
    <string name="editar">Editar evento</string>
    <string name="editDetalles">Editar evento</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="editarNumero">Cambiar número</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="contra">Contraseña</string>
    <string name="ayuda">Ingrese ubicación o arrastre el marcador</string>
    <string name="buscar">Buscar</string>
    <string name="precio">Precio</string>
    <string name="musica">Música</string>
    <string name="lugar">Ubicación</string>
    <string name="categoría">Categorías</string>
    <string name="rango">Rango de precio</string>
    <string name="sinFiltro">Sin filtro</string>
    <string name="defCosto">Se mostrarán eventos sin costo</string>
    <string name="filtrarPor">Filtrar por</string>
    <string name="blues">Blues</string>
    <string name="jazz">Jazz</string>
    <string name="rhythm">Rhythm and Blues</string>
    <string name="rock">Rock</string>
    <string name="rockEsp">Rock en español</string>
    <string name="metal">Metal</string>
    <string name="disco">Disco</string>
    <string name="techno">Techno</string>
    <string name="pop">Pop</string>
    <string name="ska">Ska</string>
    <string name="reggae">Reggae</string>
    <string name="hip">Hip Hop</string>
    <string name="salsa">Salsa</string>
    <string name="reggaeton">Reggaeton</string>
    <string name="vallenato">Vallenato</string>
    <string name="bachata">Bachata</string>
    <string name="crossover">Crossover</string>
    <string name="rap">Rap</string>
    <string name="musicaVivo">Música en vivo</string>
    <string name="baile">Baile</string>
    <string name="pintura">Pintura</string>
    <string name="gastronomia">Gastronomía</string>
    <string name="deporte">Deporte</string>
    <string name="academia">Academia - Conferencias</string>
    <string name="clases">Clases - Talleres</string>
    <string name="fiesta">Fiesta</string>
    <string name="recorrido">Recorrido</string>
    <string name="rangoPrecio">Rango de precio</string>
    <string name="publico">Público</string>
    <string name="invitar">Invitar usuarios</string>
    <string name="invitados">Invitados</string>
    <string name="pistaUsuario">Ingrese usuario o telefono</string>
    <string name="eventos">Eventos</string>
</resources>
