<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/tittle_bar"
            android:layout_width="413dp"
            android:layout_height="87dp"
            android:background="#6A1B9A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/form"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                app:fontFamily="@font/product_blod_italic" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fotoDePerfil"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="285dp"
            android:layout_height="231dp"
            app:srcCompat="@drawable/pro_1" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="siguiente"
            android:text="@string/cargar" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/c1"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="#6A1B9A"
            android:textColorHighlight="#6A1B9A"
            android:theme="@style/CampoTextoPutpura" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#DD0707" />

        <TextView
            android:id="@+id/textViewContra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/contra"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextContra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#6A1B9A"
            android:textColorHighlight="#6A1B9A"
            android:theme="@style/CampoTextoPutpura" />

        <TextView
            android:id="@+id/errContra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#DD0707" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/c2"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="#6A1B9A"
            android:textColorHighlight="#6A1B9A"
            android:gravity="center"
            android:theme="@style/CampoTextoPutpura" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#DD0707" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/descripcion"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pistaDescripcion"
            android:inputType="textPersonName"
            android:maxLength="150"
            android:textColor="#6A1B9A"
            android:textColorHighlight="#6A1B9A"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/c3"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1"
            android:textColor="#6A1B9A"
            android:textColorHighlight="#6A1B9A"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#DD0707" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="siguiente"
            android:text="@string/regi" />

        <TextView
            android:id="@+id/pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            app:fontFamily="@font/product_regular" />
    </LinearLayout>
</ScrollView>