<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="335dp" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:fontFamily="@font/product_regular" />

        <TextView
            android:id="@+id/proDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            app:fontFamily="@font/product_regular" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editPerfil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#6A1B9A"
                android:text="@string/porAsistir"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button12"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CECECE"
                android:text="@string/creados"
                android:textColor="#000000" />

        </LinearLayout>

        <ListView
            android:id="@+id/eventosUsuario"
            android:layout_width="match_parent"
            android:layout_height="287dp">

        </ListView>

        <Button
            android:id="@+id/botonCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar" />

        <TextView
            android:id="@+id/pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            app:fontFamily="@font/product_regular" />

    </LinearLayout>
</ScrollView>
