<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="413dp"
            android:layout_height="303dp"
            android:background="#6A1B9A">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal"
                android:text="@string/keki"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="60sp"
                app:fontFamily="@font/product_blod_italic" />

        </FrameLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="258dp"
            android:layout_height="148dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/tel"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textColor="#6A1B9A"
            android:textColorHighlight="#6A1B9A" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textColor="#DD0707" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="comprobar"
            android:text="@string/comp" />

    </LinearLayout>
</ScrollView>